feat(doc): adding the figures reference in the rapport sections

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -18,7 +18,7 @@ This work is part of the end-of-study project for the national diploma of Applie
 
 \section{Hosting Company}
 
-The purpose of this section is to present the company within which I developed my project.
+The purpose of this section is to present the company within which I developed my project, as shown in Figure \ref{fig:hosting-company}.
 
 \begin{figure}[htbp]
     \centering
@@ -43,7 +43,7 @@ For understanding the present scenario and to clearly demarcate our goals, some 
 
 \subsubsection{The Aseel Platform}
 
-\textbf{\textcolor{primary}{Aseel}} is a portal through which users can invest in different real estate projects with ease. The interface allows the clients to surf various investment opportunities, view the details of the properties, and then make an informed decision. Aseel introduces transparency in the investment process by offering financial data, updates regarding projects, and returns that are estimated. This platform comes with an easy-to-use dashboard through which one tracks their investments and manages their assets without any hassle.
+\textbf{\textcolor{primary}{Aseel}} is a portal through which users can invest in different real estate projects with ease. The interface allows the clients to surf various investment opportunities, view the details of the properties, and then make an informed decision. Aseel introduces transparency in the investment process by offering financial data, updates regarding projects, and returns that are estimated. This platform comes with an easy-to-use dashboard through which one tracks their investments and manages their assets without any hassle. The interface of the Aseel Platform is shown in Figure \ref{fig:aseel-platform}.
 
 \begin{figure}[htbp]
     \centering
@@ -65,7 +65,7 @@ For understanding the present scenario and to clearly demarcate our goals, some 
 
 \subsubsection{The Stake Platform}
 
-\textbf{\textcolor{primary}{Stake}} is an online investment platform that deals with real estate crowdfunding. It provides the opportunity to invest in fractions of property ownership, hence diversifying a portfolio without huge capital. On Stake, there are AI-powered recommendations based on user preferences, seamless payment integration, and a secure environment for investment. Besides, liquidity is guaranteed by enabling exit options for investors who may want to sell their shares in ongoing projects.
+\textbf{\textcolor{primary}{Stake}} is an online investment platform that deals with real estate crowdfunding. It provides the opportunity to invest in fractions of property ownership, hence diversifying a portfolio without huge capital. On Stake, there are AI-powered recommendations based on user preferences, seamless payment integration, and a secure environment for investment. Besides, liquidity is guaranteed by enabling exit options for investors who may want to sell their shares in ongoing projects. Figure \ref{fig:stake-platform} illustrates the interface of the Stake Platform.
 
 \newpage
 \thispagestyle{empty}
@@ -93,6 +93,8 @@ We can summarize all that comes from our analysis based on a number of criteria 
     \item \textbf{Resilience (C8)}: In order to prevent data loss and guarantee a smooth experience for investors, it must be able to restore lost functionalities should issues occur.
     \item \textbf{User Experience (C9)}: The interface should be intuitive and user-friendly, hence allowing investors to move with ease through it, thus making wiser decisions.
 \end{itemize}
+
+Table \ref{tab:evaluation} presents the evaluation of the existing solutions based on these criteria:
 
 \begin{table}[htbp]
     \centering
