--- a/chapter2.tex
+++ b/chapter2.tex
@@ -106,7 +106,7 @@ In this section, we'll outline the various features that our app should offer, u
 \subsection{General use case diagram}
 
 Below, we present the various actors of the application and the actions they are authorized to perform.
-The overall diagram is illustrated in the following figure:
+The overall diagram is illustrated in Figure \ref{fig:use-case-diagram}:
 
 \begin{figure}[htbp]
     \centering
@@ -152,6 +152,8 @@ Architecture Components:
     \item \textbf{View:} The frontend is built with React, TypeScript, and TanStack tools, ensuring a responsive and interactive UI. The frontend communicates with the backend via API requests, displaying dynamic content and allowing seamless user interaction.
 \end{itemize}
 
+The logical architecture is illustrated in Figure \ref{fig:logical-architecture}.
+
 \begin{figure}[htbp]
     \centering
     % Replace with actual image file once available
@@ -178,7 +180,7 @@ our material environment, the techniques we used in the realization of our proje
 
 \subsection{Physical environment}
 
-The work was carried out by a laptop computer that is equipped with these detailed features presented in Table \ref{tab:physical-env}:
+The work was carried out by a laptop computer that is equipped with these detailed features presented in Table \ref{tab:physical-env} below:
 
 \begin{table}[htbp]
     \centering
@@ -302,6 +304,8 @@ The backlog was created before the sprints to plan the milestones and determine 
     \end{itemize}
 \end{itemize}
 
+Table \ref{tab:product-backlog} shows the product backlog for our Korpor project:
+
 \begin{longtable}{|c|l|p{8cm}|c|}
     \caption{Korpor Product Backlog\label{tab:product-backlog}} \\
         \hline
@@ -344,7 +348,7 @@ The backlog was created before the sprints to plan the milestones and determine 
     PB009 & AI Integration & As a Super Admin, I want to chat with an AI assistant that can securely access database information & Could \\
     \hline
     
-    \newpage
+
 
     % Admin Features section
     \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Admin Features}}} \\
