feat(doc): fixing keywords

--- a/summary_abstract.tex
+++ b/summary_abstract.tex
@@ -26,7 +26,7 @@
     bottom=4pt,
     width=\textwidth
 ]
-\textbf{Keywords:} MySQL, Express-Node.js, React, Vite.
+\textbf{Keywords:} Blockchain Technology, AI, MySQL, Express-Node.js, React, Vite.
 \end{tcolorbox}
 
 \vspace{2cm} % Space between sections
@@ -65,7 +65,7 @@ The project management followed the SCRUM Agile methodology, with an emphasis on
     bottom=4pt,
     width=\textwidth
 ]
-\textbf{Keywords:} MySQL, Express-Node.js, React, Vite.
+\textbf{Keywords:} Blockchain Technology, AI, MySQL, Express-Node.js, React, Vite.
 \end{tcolorbox}
 
 % Ensure Summary and Abstract stay on the same page
