--- a/rapport.tex
+++ b/rapport.tex
@@ -161,7 +161,7 @@
     pdftitle={PFE Rapport},
     pdfauthor={KORPOR},
     pdfsubject={Final Year Project},
-    pdfkeywords={MySQL, Express-Node.js, React, Vite},
+    pdfkeywords={MySQL, Express-Node.js, React, Vite, Blockchain Technology, AI},
     pdfpagemode=UseOutlines,
     pdfstartview=FitH,
     bookmarksopen=true,
