fix(layout): fixing the figures layout

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -45,6 +45,8 @@ For understanding the present scenario and to clearly demarcate our goals, some 
 
 \textbf{\textcolor{primary}{Aseel}} is a portal through which users can invest in different real estate projects with ease. The interface allows the clients to surf various investment opportunities, view the details of the properties, and then make an informed decision. Aseel introduces transparency in the investment process by offering financial data, updates regarding projects, and returns that are estimated. This platform comes with an easy-to-use dashboard through which one tracks their investments and manages their assets without any hassle. The interface of the Aseel Platform is shown in Figure \ref{fig:aseel-platform}.
 
+\newpage
+
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.65\textwidth]{images/Interface-of-the Aseel Platform.png}
