fix(quote): changing the quote to onther with a good reference

--- a/references.bib
+++ b/references.bib
@@ -564,4 +564,13 @@
   url          = {https://www.typescriptlang.org/docs/},
   urldate      = {2025-05-30},
   organization = {Microsoft Corporation}
+}
+
+@book{RooseveltRealEstateQuote,
+  author    = {Roosevelt, Franklin D.},
+  title     = {The Public Papers and Addresses of Franklin D. Roosevelt},
+  publisher = {Random House},
+  year      = {1938},
+  volume    = {7},
+  note      = {Quoted in numerous real estate publications and historical archives}
 } 
