--- a/general_introduction.tex
+++ b/general_introduction.tex
@@ -5,11 +5,11 @@
 \begin{center}
 \begin{minipage}{1\textwidth}
     \begin{center}
-        \large\itshape ``The future of real estate investment lies at the intersection of blockchain security, AI-driven insights, and crowdfunding accessibility. When we remove barriers and democratize opportunity through technology, we don't just change markets—we transform lives and build communities.''
+        \large\itshape ``Real estate cannot be lost or stolen, nor can it be carried away. Purchased with common sense, paid for in full, and managed with reasonable care, it is about the safest investment in the world.''\cite{RooseveltRealEstateQuote}
         \vspace{1cm}
         
-        \normalfont\textcolor{primary}{— Marc Andreessen}\\
-        \small\textcolor{secondary}{Co-founder of Andreessen Horowitz \& Tech Investment Visionary}
+        \normalfont\textcolor{primary}{— Franklin D. Roosevelt}\\
+        \small\textcolor{secondary}{32nd President of the United States}
     \end{center}
 \end{minipage}
 \end{center}
