--- a/references.bib
+++ b/references.bib
@@ -573,4 +573,28 @@
   year      = {1938},
   volume    = {7},
   note      = {Quoted in numerous real estate publications and historical archives}
+}
+
+@online{PropertyStarTunisia,
+  title        = {PropertyStar Tunisia - Real Estate Listings},
+  url          = {https://www.properstar.co.uk/tunisia},
+  urldate      = {2023-11-15},
+  organization = {PropertyStar Ltd.},
+  year         = {2023}
+}
+
+@online{RemaxTunisia,
+  title        = {RE/MAX Tunisia Real Estate},
+  url          = {https://www.remax.com.tn/},
+  urldate      = {2023-11-15},
+  organization = {RE/MAX Tunisia},
+  year         = {2023}
+}
+
+@online{AlMindhar,
+  title        = {Al-Mindhar Real Estate Platform},
+  url          = {https://al-mindhar.com/},
+  urldate      = {2023-11-15},
+  organization = {STE SK ALMINDHAR},
+  year         = {2023}
 } 
