fix(layout): fixing layout including the bib

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -156,6 +156,13 @@ The completion of the project on its delivery date is the main problem of every 
 
 \textbf{\textcolor{primary}{Scrum}} is an agile development approach that is used to create software using incremental and iterative methods. Scrum is a quick, flexible, and efficient agile methodology that is intended to provide value to the client at every stage of the project's development \cite{ScrumGuide2020}. Scrum is founded on empiricism and lean thinking, employing an iterative, incremental approach guided by the three pillars of transparency, inspection, and adaptation \cite{AtlassianScrumPillars, ScrumGuide2020}. Scrum's main goal is to meet customer needs by fostering an atmosphere of open communication, group accountability, and constant improvement, underpinned by the Scrum values of Commitment, Focus, Openness, Respect, and Courage \cite{ScrumGuide2020}. The development process begins with a broad concept of what must be constructed, developing a list of features that the product owner desires, and arranging them according to priority (product backlog).
 
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=0.9\textwidth]{images/agile.png}
+    \caption{Agile Scrum Framework Process}
+    \label{fig:agile-scrum}
+\end{figure}
+
 \subsection{Agile Scrum roles and responsibilities}
 
 \subsubsection{The Product Owner}
